some css change

--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
         </section>
         <section>
             <div class="extra-part ">
-                <h1>Learning <span class="extra-color">Web Development</span> </h1>
+                <h1>Learn <span class="extra-color">Web Development</span> </h1>
                 <div class="p-hero">
                     <div class="half-width pHero-photo">
                         <img src="./images/p-hero.png" alt="">
